--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,23 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# compiled output
 /dist
 /tmp
 
+# dependencies
 /node_modules
+/bower_components
 
-*.DS_Store
-*.sublime-*
+# misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
+npm-debug.log
+testem.log
+
+# OS X
+.DS_Store
+
+# WebStorm / IntelliJ IDEA
+.idea
