--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "ember-cli-font-awesome",
-  "version": "0.0.10",
+  "version": "0.1.0",
   "description": "An ember-cli addon for using Font Awesome icons in Ember applications.",
   "repository": "https://github.com/lfridael/ember-cli-font-awesome",
-  "keywords": [ "ember-addon" ],
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
+  "scripts": {
+    "start": "ember server",
+    "build": "ember build",
+    "test": "ember try:testall"
+  },
   "engines": {
     "node": ">= 0.10.0"
   },
@@ -12,7 +20,32 @@
     "type": "Public Domain",
     "url": "https://raw.githubusercontent.com/lfridael/ember-cli-font-awesome/master/UNLICENSE"
   },
+  "devDependencies": {
+    "broccoli-asset-rev": "^2.0.2",
+    "ember-cli": "1.13.1",
+    "ember-cli-app-version": "0.4.0",
+    "ember-cli-content-security-policy": "0.4.0",
+    "ember-cli-dependency-checker": "^1.0.0",
+    "ember-cli-htmlbars": "0.7.9",
+    "ember-cli-htmlbars-inline-precompile": "^0.1.1",
+    "ember-cli-ic-ajax": "0.2.1",
+    "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-qunit": "0.3.15",
+    "ember-cli-release": "0.2.3",
+    "ember-cli-uglify": "^1.0.1",
+    "ember-data": "1.13.5",
+    "ember-disable-proxy-controllers": "^1.0.0",
+    "ember-export-application-global": "^1.0.2",
+    "ember-disable-prototype-extensions": "^1.0.0",
+    "ember-try": "0.0.6"
+  },
+  "keywords": [
+    "ember-addon"
+  ],
   "dependencies": {
-    "font-awesome": "4.3.0"
+    "ember-cli-babel": "^5.0.0"
+  },
+  "ember-addon": {
+    "configPath": "tests/dummy/config"
   }
 }
