--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.0.0"
+    "broccoli-funnel": "^0.2.3",
+    "ember-cli-babel": "^5.0.0",
+    "ember-cli-sass": "^4.0.0-beta.5"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
