--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
   - EMBER_TRY_SCENARIO=default
   - EMBER_TRY_SCENARIO=ember-1.12.X
   - EMBER_TRY_SCENARIO=ember-1.13.X
+  - EMBER_TRY_SCENARIO=ember-2.0.X
   - EMBER_TRY_SCENARIO=ember-release
   - EMBER_TRY_SCENARIO=ember-beta
   - EMBER_TRY_SCENARIO=ember-canary
