--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
     - node_modules
 
 env:
-  - EMBER_TRY_SCENARIO=default
+  - EMBER_TRY_SCENARIO=ember-1.11.X
   - EMBER_TRY_SCENARIO=ember-1.12.X
   - EMBER_TRY_SCENARIO=ember-1.13.X
   - EMBER_TRY_SCENARIO=ember-2.0.X
@@ -21,6 +21,7 @@ env:
 matrix:
   fast_finish: true
   allow_failures:
+    - env: EMBER_TRY_SCENARIO=ember-1.11.X
     - env: EMBER_TRY_SCENARIO=ember-1.12.X
     - env: EMBER_TRY_SCENARIO=ember-canary
 
