--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   "dependencies": {
     "broccoli-funnel": "^0.2.10",
     "ember-cli-babel": "^5.1.5",
-    "ember-cli-sass": "^5.0.1"
+    "ember-cli-sass": "^5.0.1",
+    "ember-computed-decorators": "0.2.1"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
