--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,17 @@
   "name": "ember-cli-font-awesome",
   "dependencies": {
     "ember": "2.1.0",
-    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.6",
-    "ember-cli-test-loader": "ember-cli-test-loader#0.2.1",
-    "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.7",
-    "ember-qunit": "0.4.9",
-    "ember-qunit-notifications": "0.1.0",
-    "jquery": "^1.11.1",
-    "loader.js": "ember-cli/loader.js#3.3.0",
-    "qunit": "~1.19.0"
+    "ember-cli-shims": "0.0.6",
+    "ember-cli-test-loader": "0.2.1",
+    "ember-load-initializers": "0.1.7",
+    "ember-qunit": "0.4.16",
+    "ember-qunit-notifications": "0.1.0"
   },
   "devDependencies": {
     "bootstrap": "~3.3.5",
-    "font-awesome": "~4.4.0"
+    "font-awesome": "~4.4.0",
+    "jquery": "^1.11.3",
+    "loader.js": "ember-cli/loader.js#3.3.0",
+    "qunit": "~1.20.0"
   }
 }
