--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ember-cli-font-awesome",
   "version": "1.3.0",
   "description": "An ember-cli addon for using Font Awesome icons in Ember applications.",
-  "repository": "https://github.com/lfridael/ember-cli-font-awesome",
+  "repository": "https://github.com/martndemus/ember-cli-font-awesome",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -15,10 +15,10 @@
   "engines": {
     "node": ">= 0.12.0"
   },
-  "author": "laurens.fridael@gmail.com",
+  "author": "Marten Schilstra <mail@martenschilstra.nl",
   "license": {
     "type": "Public Domain",
-    "url": "https://raw.githubusercontent.com/lfridael/ember-cli-font-awesome/master/UNLICENSE"
+    "url": "https://raw.githubusercontent.com/martndemus/ember-cli-font-awesome/master/UNLICENSE"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.3.0",
