--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "engines": {
     "node": ">= 0.12.0"
   },
-  "author": "Marten Schilstra <mail@martenschilstra.nl",
+  "author": "Marten Schilstra <mail@martenschilstra.nl>",
   "license": "Unlicense",
   "devDependencies": {
     "broccoli-asset-rev": "^2.3.0",
