--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ env:
   - EMBER_TRY_SCENARIO=ember-1.12.X
   - EMBER_TRY_SCENARIO=ember-1.13.X
   - EMBER_TRY_SCENARIO=ember-2.0.X
-  - EMBER_TRY_SCENARIO=ember-release
+  - EMBER_TRY_SCENARIO=ember-2.1.X
+  - EMBER_TRY_SCENARIO=ember-2.2.X
   - EMBER_TRY_SCENARIO=ember-beta
   - EMBER_TRY_SCENARIO=ember-canary
 
