--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-font-awesome",
-  "version": "1.3.0",
+  "version": "1.4.0-beta.1",
   "description": "An ember-cli addon for using Font Awesome icons in Ember applications.",
   "repository": "https://github.com/martndemus/ember-cli-font-awesome",
   "directories": {
