Update to ember-cli 2.4.1
Updated ember-cli to version 2.4.1 and also ran `ember init` (only
applying changes where they made sense). Finally added an ember-try
scenario for ember 2.4.1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ env:
   - EMBER_TRY_SCENARIO=ember-2.1.X
   - EMBER_TRY_SCENARIO=ember-2.2.X
   - EMBER_TRY_SCENARIO=ember-2.3.X
+  - EMBER_TRY_SCENARIO=ember-2.4.X
 
 before_install:
   - "export DISPLAY=:99.0"
