--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "ember-computed-decorators": "0.2.2"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "before": [
+      "ember-cli-sass"
+    ]
   }
 }
