--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ember-cli-font-awesome",
+  "name": "ember-font-awesome",
   "version": "1.5.0",
   "description": "An ember-cli addon for using Font Awesome icons in Ember applications.",
-  "repository": "https://github.com/martndemus/ember-cli-font-awesome",
+  "repository": "https://github.com/martndemus/ember-font-awesome",
   "directories": {
     "doc": "doc",
     "test": "tests"
