--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-addon"
   ],
   "dependencies": {
+    "chalk": "^1.1.3",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-computed-decorators": "0.2.2"
