--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,13 @@ cache:
     - node_modules
 
 env:
-  - EMBER_TRY_SCENARIO=ember-2.3.X
-  - EMBER_TRY_SCENARIO=ember-2.4.X
+  - EMBER_TRY_SCENARIO=default
+  - EMBER_TRY_SCENARIO=ember-2.3
+  - EMBER_TRY_SCENARIO=ember-2.4
+  - EMBER_TRY_SCENARIO=ember-2.5
+  - EMBER_TRY_SCENARIO=ember-release
+  - EMBER_TRY_SCENARIO=ember-beta
+  - EMBER_TRY_SCENARIO=ember-canary
 
 before_install:
   - "export DISPLAY=:99.0"
