--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,9 @@
   "name": "ember-font-awesome",
   "dependencies": {
     "ember": "components/ember#canary",
-    "ember-cli-shims": "0.1.0",
-    "ember-cli-test-loader": "0.2.2",
+    "ember-cli-shims": "0.1.1",
     "ember-qunit-notifications": "0.1.0",
-    "font-awesome": "~4.6.0",
-    "jquery": "1.11.3"
+    "font-awesome": "~4.6.0"
   },
   "resolutions": {
     "ember": "canary"
