--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "chalk": "^1.1.3",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-htmlbars": "^1.1.1",
-    "ember-computed-decorators": "^0.3.0"
+    "ember-computed-decorators": "^0.3.0",
+    "font-awesome": "^4.7.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
