--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "ember-addon"
   ],
   "dependencies": {
+    "broccoli-funnel": "^1.1.0",
+    "broccoli-merge-trees": "^1.2.1",
     "chalk": "^1.1.3",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-htmlbars": "^1.1.1",
