--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "chalk": "^1.1.3",
     "ember-cli-babel": "^6.3.0",
     "ember-cli-htmlbars": "^2.0.2",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "ember-ast-helpers": "0.0.1"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
