Save temporary ñapa xDD

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ember-cli-babel": "^6.3.0",
     "ember-cli-htmlbars": "^2.0.2",
     "font-awesome": "^4.7.0",
-    "ember-ast-helpers": "0.0.2"
+    "ember-ast-helpers": "0.0.2",
+    "fs-readdir-recursive": "^1.0.0"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
