--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "broccoli-filter": "^1.2.4",
     "broccoli-funnel": "^1.2.0",
     "chalk": "^1.1.3",
-    "ember-cli-babel": "^6.3.0",
     "ember-ast-helpers": "0.0.3",
+    "ember-cli-babel": "^6.3.0",
     "ember-cli-htmlbars": "^2.0.2",
     "font-awesome": "^4.7.0",
     "fs-readdir-recursive": "^1.0.0",
@@ -44,6 +44,7 @@
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-native-dom-helpers": "^0.5.4",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.1",
     "loader.js": "^4.2.3"
