--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-font-awesome",
-  "version": "3.0.5",
+  "version": "4.0.0-alpha.0",
   "description": "An ember-cli addon for using Font Awesome icons in Ember applications.",
   "keywords": [
     "ember-addon"
@@ -37,7 +37,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
-    "ember-cli-release": "^0.2.9",
+    "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
